[package]
name = "rsomics-phylo-tree"
version = "0.1.0"
description = "Phylogenetic tree type + Newick parser/emitter for the rsomics-* tool family. Layer A primitive."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories = ["science"]
keywords = ["phylogenetics", "newick", "tree", "bioinformatics"]

[dependencies]
thiserror.workspace = true

[lints]
workspace = true
