[package]
name = "rsomics-phylo-tree"
version = "0.1.0"
description = "Phylogenetic tree type + Newick parser/emitter for the rsomics-* tool family. Layer A primitive."
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science"]
keywords = ["phylogenetics", "newick", "tree", "bioinformatics"]

[dependencies]
thiserror = "2"

